--- a/natours/index.html
+++ b/natours/index.html
@@ -16,7 +16,14 @@
 
 <body>
     <header class="header">
-        header
+        <div class="logo-box">
+            <img src="img/logo-white.png" alt="Logo" class="logo">
+        </div>
+
+        <h1 class="heading-primary">
+            <span class="heading-primary-main d-block">Outdoors</span>
+            <span class="heading-primary-sub d-block">Is Where Life Happens</span>
+        </h1>
     </header>
 
 </body>
