centering header text

--- a/natours/index.html
+++ b/natours/index.html
@@ -20,10 +20,12 @@
             <img src="img/logo-white.png" alt="Logo" class="logo">
         </div>
 
-        <h1 class="heading-primary">
-            <span class="heading-primary-main d-block">Outdoors</span>
-            <span class="heading-primary-sub d-block">Is Where Life Happens</span>
-        </h1>
+        <div class="text-box">
+            <h1 class="heading-primary">
+                <span class="heading-primary-main d-block">Outdoors</span>
+                <span class="heading-primary-sub d-block">Is Where Life Happens</span>
+            </h1>
+        </div>
     </header>
 
 </body>
