--- a/natours/index.html
+++ b/natours/index.html
@@ -25,7 +25,7 @@
                 <span class="heading-primary-main d-block">Outdoors</span>
                 <span class="heading-primary-sub d-block">Is Where Life Happens</span>
             </h1>
-            <a href="#" class="btn btn-white">Discover our tours</a>
+            <a href="#" class="btn btn-white btn-animated">Discover our tours</a>
         </div>
     </header>
 
