exploring animation key frame backwards html with extra button

--- a/gym/animation.html
+++ b/gym/animation.html
@@ -21,6 +21,9 @@
     <div class="animation-fill-mode-forwards square background-grey-1">
         forwards
     </div>
+    <br>
+    <button class="animation-fill-bottom-btn">Button</button>
+    <button class="animation-fill-bottom-btn-backwards">backwards button</button>
 </body>
 
 </html>
